2014-06-11  Ryosuke Niwa  <rniwa@webkit.org>

        Turning on DUMP_PROPERTYMAP_STATS causes a build failure
        https://bugs.webkit.org/show_bug.cgi?id=133673

        Reviewed by Andreas Kling.

        Added DEFINE_GLOBAL_FOR_LOGGING to allow running a destructor in logging code
        that needs to be enabled in release builds (e.g. for JavaScriptCore).

        * wtf/StdLibExtras.h:

2014-06-09  Benjamin Poulain  <bpoulain@apple.com>

        Improve CSSPrimitiveValue::customCSSText for ARMv7
        https://bugs.webkit.org/show_bug.cgi?id=133597

        Reviewed by Andreas Kling.

        * wtf/RefPtr.h:
        (WTF::RefPtr<T>::RefPtr):
        * wtf/text/WTFString.h:
        (WTF::String::String):

2014-06-05  Yoav Weiss  <yoav@yoav.ws>

        Align srcset parser with recent spec changes
        https://bugs.webkit.org/show_bug.cgi?id=133504

        Reviewed by Darin Adler.

        I've added toInt and toFloat methods to StringView, and exposed
        charactersToInt so that they can be used by
        HTMLSrcsetParser.cpp.

        * wtf/text/WTFString.h:
        * wtf/text/StringView.h:
        (WTF::StringView::toInt):
        (WTF::StringView::toFloat):

2014-06-04  Alex Christensen  <achristensen@webkit.org>

        Enable WebGL on Windows.
        https://bugs.webkit.org/show_bug.cgi?id=133503

        Reviewed by Brent Fulgham.

        * wtf/FeatureDefines.h:
        Enable WebGL for AppleWin and WinCairo ports.

2014-06-01  Jer Noble  <jer.noble@apple.com>

        [MSE] Appends of overlapping sample data do not clear existing samples properly.
        https://bugs.webkit.org/show_bug.cgi?id=133435

        Reviewed by Darin Adler.

        Add a dump method to MediaTime, so that MediaTimes can be easily converted to strings (for logging purposes).

        * wtf/MediaTime.cpp:
        (WTF::MediaTime::dump):
        * wtf/MediaTime.h:

2014-05-31  Anders Carlsson  <andersca@apple.com>
